Hand evaluation works with all the cases in traditional 5 hand poker game